@@ -1,3 +1,6 @@
+20210303/pbiering:
+- add initial Pixmap support to HdFbTrueColorOsd
+
 20210224/pbiering:
 - fix improper working of HdFbTrueColorOsd HdTrueColorOsd
 - fix improper working of PictureAdjustment menu
